--- a/src/main/resources/static/css/user/login.css
+++ b/src/main/resources/static/css/user/login.css
@@ -18,7 +18,7 @@ form {
     width: 500px;
     text-align: center;
     margin: auto;
-    padding-top: 100px;
+    padding: 100px 0;
 }
 
 form input {
