--- a/src/main/resources/static/css/user/register.css
+++ b/src/main/resources/static/css/user/register.css
@@ -4,28 +4,27 @@
     box-sizing: border-box;
 }
 
-input {
+.register_wrap input {
     height: 40px;
     font-size: 16px;
     width: 100%;
 }
 
-input::placeholder {
+.register_wrap input::placeholder {
     font-size: 14px;
 }
 
-
-form{
+.register_wrap {
     text-align: center;
     width: 500px;
-    margin: auto;
+    margin: 50px auto;
 }
 
-form > h1 {
+.register_wrap > h1 {
     margin: 20px 0;
 }
 
-form > input {
+.register_wrap > input {
     margin-bottom: 5px;
 }
 
