--- a/src/main/resources/templates/admin/adminNav.html
+++ b/src/main/resources/templates/admin/adminNav.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <nav th:fragment="adminNav">
-        <a href="/admin/upload" sec:authorize="hasRole('ADMIN')">파일 업로드</a>
-        <a href="/admin/bookmanage" sec:authorize="hasRole('ADMIN')">파일 관리</a>
+        <a href="/admin/upload" sec:authorize="hasRole('ADMIN')">제품 등록</a>
+        <a href="/admin/bookmanage" sec:authorize="hasRole('ADMIN')">제품 관리</a>
         <a href="/admin/usermanage" sec:authorize="hasRole('ADMIN')">회원 관리</a>
     </nav>
 </body>
