--- a/src/main/resources/templates/admin/upload.html
+++ b/src/main/resources/templates/admin/upload.html
@@ -8,9 +8,11 @@
     <meta th:name="${_csrf.parameterName}" th:content="${_csrf.token}">
     <title>제품등록</title>
 	<link rel="stylesheet" href="/static/css/main/header.css" th:href="@{/css/main/header.css}">
+	<link rel="stylesheet" href="/static/css/admin/adminNav.css" th:href="@{/css/admin/adminNav.css}">
 	<link rel="stylesheet" href="/static/css/main/footer.css" th:href="@{/css/main/footer.css}">
 	<link rel="stylesheet" href="/static/css/admin/upload.css" th:href="@{/css/admin/upload.css}">
     <script src="https://kit.fontawesome.com/8b1463211e.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
 	<th:block th:replace="~{main/header :: header}"></th:block>
