230908 회원가입 페이지 디자인 수정 및 정규식 추가

--- a/src/main/resources/static/css/user/register.css
+++ b/src/main/resources/static/css/user/register.css
@@ -52,6 +52,11 @@
     margin: 5px 0;
 }
 
+.info_box > span {
+    color: gray;
+    font-size: 12px;
+}
+
 .flex_text_btn {
     display: flex;
     margin-bottom: 5px;
