--- a/src/main/resources/templates/admin/bookmanage.html
+++ b/src/main/resources/templates/admin/bookmanage.html
@@ -10,16 +10,9 @@
 	<link rel="stylesheet" href="/static/css/main/footer.css" th:href="@{/css/main/footer.css}">
 	<link rel="stylesheet" href="/static/css/admin/adminNav.css" th:href="@{/css/admin/adminNav.css}">
 	<link rel="stylesheet" href="/static/css/main/header.css" th:href="@{/css/main/header.css}">
+	<link rel="stylesheet" href="/static/css/admin/bookmanage.css" th:href="@{/css/admin/bookmanage.css}">
 	<script src="/static/js/admin/manage.js" th:src="@{/js/admin/manage.js}" defer></script>
     <script src="https://kit.fontawesome.com/8b1463211e.js" crossorigin="anonymous"></script>
-	<style>
-		table {
-			width: 100%;
-			max-width: 1300px;
-			min-width: 1200px;
-			margin: 50px auto;
-		}
-	</style>
 </head>
 <body>
 	<th:block th:replace="~{main/header :: header}"></th:block>
@@ -27,7 +20,7 @@
 	<table border="1px">
 			<thead>
 				<tr>
-					<td>ISBN</td>
+					<td>도서번호</td>
 					<td>제목</td>
 					<td>작가</td>
 					<td>출판사</td>
