--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -25,7 +25,7 @@
             </span>
             <a href="">아이디/비밀번호 찾기</a>
         </div>
-        <a href="">네이버로 로그인</a>
+<!--        <a href="">네이버로 로그인</a>-->
         <a href="/oauth2/authorization/kakao">카카오로 로그인</a>
         <input type="button" value="회원가입" onclick="location.href= '/user/register'">
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
