230919 제품 상세 페이지 디자인 변경 및 기능 개선

--- a/src/main/resources/templates/main/details.html
+++ b/src/main/resources/templates/main/details.html
@@ -36,7 +36,7 @@
 			<b>내용</b><br/>
 			<div class="book_detail_content" >
 				<div th:each="content: ${bookVO.contents.split('\n')}">
-					<div th:text="${content}"></div>
+					<span th:text="${content}"></span>
 				</div>
 			</div>
 		</div>
