23-09-21 sql 다중 update 에러로 인한 sql 수정 / 메인페지이 제품 출력 시 order순으로 출력 시 이상으로 sql 수정 / 메인페이지 페이지 변경시 스크롤 맨 위로 이동하도록 수정

--- a/src/main/resources/static/css/main/cart.css
+++ b/src/main/resources/static/css/main/cart.css
@@ -87,6 +87,7 @@ main {
 /*==== cart_main_container ====*/
 #cart_main_container {
     min-width: 1300px;
+    min-height: 600px;
     display: flex;
     justify-content: space-between;
 }
