--- a/src/main/resources/static/css/main/home.css
+++ b/src/main/resources/static/css/main/home.css
@@ -57,6 +57,8 @@ button {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 50px;
     margin-top: 30px;
+    align-items: center;
+    justify-items: center;
 }
 
 .book {
