23-09-21 sql 다중 update 에러로 인한 sql 수정 / 메인페지이 제품 출력 시 order순으로 출력 시 이상으로 sql 수정 / 메인페이지 페이지 변경시 스크롤 맨 위로 이동하도록 수정

--- a/src/main/resources/templates/admin/bookmodify.html
+++ b/src/main/resources/templates/admin/bookmodify.html
@@ -24,7 +24,7 @@
 			<div><span>제목</span> <input th:type="text" th:name="bookVO.title" th:value="${bookVO.title}"></div>
 			<div><span>작가</span> <input th:type="text" name="bookVO.author" th:value="${bookVO.author}"></div>
 			<div><span>출판사</span> <input th:type="text" name="bookVO.publisher" th:value="${bookVO.publisher}"></div>
-			<div><span>목차</span> <textarea th:type="text" th:name="bookVO.contents" th:text="${bookVO.contents}"></textarea></div>
+			<div><span>내용</span> <textarea th:type="text" th:name="bookVO.contents" th:text="${bookVO.contents}"></textarea></div>
 			<div><span>소개글</span> <textarea th:type="text" th:name="bookVO.introduce" th:text="${bookVO.introduce}"></textarea></div>
 			<div><span>가격</span> <input th:type="number" th:name="bookVO.price" th:value="${bookVO.price}"></div>
 			<div><span>메인 이미지 파일</span> <input th:type="file" th:name="mainImageFile" accept="image/*"></div>
